--- a/css/offers.css
+++ b/css/offers.css
@@ -1,100 +1,4 @@
-.offers_position_main {margin-top:125px;}
+.offers_position_main {margin-top:185px;}
 .creditcards {margin-top:50px;}
-.creditcards__item {
-    display:inline-block;
-    width:361.5px;
-    margin-right:22.5px;
-    border-radius:5px;
-    padding:144px 20px 26px 20px;
-    overflow:hidden;
-    position:relative;
-    background:#fff;
-
-}
-.creditcards__item:last-child {margin-right:0; margin-left:1px;]}
-.creditcards__title { 
-    margin-top:35px;
-    color:#000;
-    font-weight:700;
-    font-size:24px;
-    line-height:32px;
-}
-.creditcards__info {
-    margin-bottom:34px;
-    margin-top:24px;
-}
-.creditcards__service, .creditcards__cashback {
-    width:157px;
-    display:inline-block;
-}
-
-.creditcards__sum { 
-    color:#000;
-    font-size:36px;
-    line-height:36px;
-}
-.creditcards__desc { 
-    color:#666;
-    font-size:16px;
-    line-height:20px;
-    margin-top:12px;
-}
-.creditcards__more {margin-left:77px;}
-
-.creditcards__item_basic:after {
-    content:'';
-    position:absolute;
-    top:0;
-    left:0; 
-    width:100%;
-    height:144px;
-    background:url(../img/offers/basic.png) center 40px no-repeat;
-}
-.creditcards__item_optima:after {
-    content:'';
-    position:absolute;
-    top:0;
-    left:0; 
-    width:100%;
-    height:144px;
-    background:url(../img/offers/optima.png) center 40px no-repeat;
-}
-.creditcards__item_platinum:after {
-    content:'';
-    position:absolute;
-    top:0;
-    left:0; 
-    width:100%;
-    height:144px;
-    background:url(../img/offers/platinum.png) center 40px no-repeat;
-}
-.creditcards__item_basic:before {
-     display:block; 
-     position:absolute; 
-     height:255px; 
-     width:260px; 
-     background:#a7a7a7; 
-     border-radius:50%; 
-     right:-86px; 
-     top:-130px;
-     content:"";}
-.creditcards__item_optima:before {
-     display:block; 
-     position:absolute; 
-     height:255px; 
-     width:260px; 
-     background:#596483; 
-     border-radius:50%; 
-     right:-86px; 
-     top:-130px; 
-     content:"";}
-.creditcards__item_platinum:before {
-     display:block; 
-     position:absolute; 
-     height:255px; 
-     width:260px; 
-     background:#988657; 
-     border-radius:50%; 
-     right:-86px; 
-     top:-130px; 
-     content:"";}
+.creditcards__item {margin-right:22.5px;}
+.creditcards__item:last-child {margin-right:0;}
