--- a/css/about.css
+++ b/css/about.css
@@ -1,11 +1,9 @@
-.about {
+.about__container {
     background:url(../img/about/chess.png) left top no-repeat;
     padding:97px 0 53px 354px;
-    border-bottom:1px solid rgba(255,255,255,0.1);
-    margin-bottom:47px;
 }
 .about_position_main {
-    margin-top:118px;
+    margin-top:145px;
 }
 
 .about__content {
@@ -15,9 +13,8 @@
 }
 
 .about__text {
-    font-size:16px;
-    line-height:28px;
+    line-height:1.75;
     margin-top:36px;
 }
 
-.about__more {margin-top:50px;}
+.about__more {margin-top:68px;}
