--- a/css/footer.css
+++ b/css/footer.css
@@ -2,25 +2,41 @@
     width:100%;
     position:absolute;
     bottom:0;
-    padding:41px 0 53px 0;
+    background-color:#29282D;
 }
-.footer .contacts {
-    float:right;
+
+
+.footer__container {
+    height:162px;
+    border-top:1px solid rgba(255,255,255,0.1);
+    padding:45px 0 65px 0;
 }
-.footer .logo {
-    float:left;
-    margin-top:12px;
+
+.footer__logo, .footer__main-menu, .footer__contacts {
+    position:absolute;
 }
-.footer .main-menu {
-    margin:22px 0 0 90px;
-    float:left;
+.footer__logo {
+    position:absolute;
+    top:54px;
+    left:0; 
 }
+.footer__main-menu {
+    top:60px;
+    left:255px;
+}
+
+.footer__socials {
+    position:absolute;
+    top:50px;
+    left:700px;
+}
+.footer__contacts {
+    top:45px;
+    right:0;
+}
+
 .contacts__free-call {
     font-size:11px;
-    line-height:26px;
+    line-height:2;
     color:#9a9a9a;
-}
-.footer .socials {
-    float:left;
-    margin:9px 0 0 184px;
 }
