--- a/css/blocks/paginator.css
+++ b/css/blocks/paginator.css
@@ -23,3 +23,16 @@
 .paginator__link:hover, .paginator__link:active {
     background-color:#353439;
 }
+
+.paginator_style_light {
+    color:#202123;
+
+}
+
+.paginator_style_light .paginator__link {    font-weight:700;
+}
+
+.paginator_style_light .paginator__link:hover, .paginator_style_light .paginator__link:active {
+    color:#fff;
+    background:#353538;
+}
