--- a/css/blocks/page-top.css
+++ b/css/blocks/page-top.css
@@ -1,14 +1,17 @@
 .page-top {
-    min-height:430px;
+    min-height:412px;
     display:flex;
     flex-direction:column;
     background: url(../../img/page-top/page-top.png) center top no-repeat #29282D;
-    background-size:100% auto;
-    padding-bottom:26px;
+    background-size:auto 100%;
+    padding-bottom:22px;
 }
 .page-top__container {
     flex:1;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.page-top__title {padding-top:85px;
 }
