--- a/css/blocks/article-preview.css
+++ b/css/blocks/article-preview.css
@@ -8,10 +8,15 @@
     
 }
 .article-preview__image {
-width:30%;
-    margin-right: 7%;}
+width:45%;
+margin-right: 2%;
+}
 .article-preview__text {
     flex:1;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
 }
 .article-preview__title {
     font-size:30px;
@@ -25,6 +30,8 @@ width:30%;
 }
 .article-preview__button {
     margin-top:20px;
+    margin-top:auto;
+
 }
 
 .article-preview:hover {background:#f4f5f5;}
