--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -15,6 +15,9 @@
     height:162px;
     border-top:1px solid rgba(255,255,255,0.1);
     padding:45px 0 65px 0;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
     
 }
 
@@ -43,4 +46,4 @@
 }
 
 .inner-footer {margin-top:auto;}
-.inner-footer .footer__container { padding:45px 0;}
+.inner-footer .footer__container {padding:45px 0;}
