--- a/css/blocks/article-preview.css
+++ b/css/blocks/article-preview.css
@@ -28,6 +28,7 @@ margin-right: 5%;
 .article-preview__desc {
     padding-top:50px;
     line-height:1.5;
+    padding-bottom:30px;
 }
 .article-preview__button {
     margin-top:20px;
