--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "./layout/default.css" screen;
 
 @import "./blocks/header.css" screen;
+@import "./blocks/logo.css" screen;
 @import "./blocks/main-menu.css" screen;
 @import "./blocks/contacts.css" screen;
 @import "./blocks/footer.css" screen;
