--- a/css/blocks/article-preview.css
+++ b/css/blocks/article-preview.css
@@ -32,9 +32,13 @@ margin-right: 5%;
 }
 .article-preview__button {
     margin-top:auto;
-
+    min-width:165px;
 }
+
+.article-preview__send {display:none;}
 
 .article-preview:hover {background:#f4f5f5;}
 
 .article-preview:hover .article-preview__button {background:#D3A557;}
+.article-preview__button:hover .article-preview__send {display:block;}
+.article-preview__button:hover .article-preview__more {display:none;}
