--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -15,15 +15,19 @@
     line-height:1.2;
     text-decoration:underline;
 }
-.contacts__shedule:hover .contacts__title {color:#D3A557;}
-.contacts__shedule:hover .contacts__dropdown, .contacts__dropdown:hover {display:block;}
+
 .contacts__dropdown {
     display:none;
     position:absolute;
     right:0;
     bottom:-75px;
+    z-index:1;
     padding-top:23px;
 }
+
+.contacts__shedule:hover .contacts__title {color:#D3A557;}
+.contacts__shedule:hover .contacts__dropdown, .contacts__dropdown:hover {display:block;}
+
 .contacts__info {
     padding:13px 18px 13px 18px;
     background:#ededed;
