--- a/css/blocks/preview.css
+++ b/css/blocks/preview.css
@@ -4,8 +4,8 @@
     position:relative;
 }
 .preview__img {
+    display:block;
     max-width:100%;
-    max-height:100%;
 }
 .preview__text {
     position:absolute;
