--- a/css/blocks/article-preview.css
+++ b/css/blocks/article-preview.css
@@ -8,7 +8,7 @@
     
 }
 .article-preview__image {
-width:40.3%;
+max-width:40.3%;
 margin-right: 5%;
 }
 .article-preview__text {
@@ -23,10 +23,10 @@ margin-right: 5%;
     font-weight:700;
     color:#202020;
     width:89.5%;
+    padding-bottom:45px;
 
 }
 .article-preview__desc {
-    padding-top:45px;
     line-height:1.7;
     padding-bottom:53px;
 }
