--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -7,10 +7,7 @@
     margin-top:125px;
 }
 
-.partners__title {
-    font-size:48px;
-    color:#202020;
-}
+
 .partners__list {
     margin-top:50px;
     display:flex;
@@ -39,7 +36,7 @@
     justify-content: flex-end; 
 }
 
-.partner__link:hover {filter:grayscale(0);}
+.partner__link:hover {filter:grayscale(0); transition: 0.3s linear;}
 .partner__img {
     display: block;
     max-width:100%;}
