--- a/css/blocks/preview.css
+++ b/css/blocks/preview.css
@@ -12,15 +12,15 @@
     bottom:0;
     left:0;
     width:100%;
-    padding:0 30px 15px 30px;
+    padding:0 30px 10px 30px;
     
 }
 .preview__date {
     font-size:14px;
     line-height:1.5;
+    margin-bottom:11px;
 }
 .preview__topic {
-    margin-top:13px;
     font-size:24px;
     line-height:1.5;
 }
