--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
     width:100vw;
     align-items: center;
     justify-content: center;
-    background: url("../../img/splash.png") center center no-repeat;
+    background: url("../img/splash.png") center center no-repeat;
     
 }
 
