--- a/css/blocks/controls.css
+++ b/css/blocks/controls.css
@@ -2,10 +2,12 @@
     display: flex;
     flex: 1;
     flex-wrap: wrap;
+    justify-content: space-between;
+    padding-right:30px;
 }
 
 .controls__item {
-    margin: 0 10px 10px 0;
+    margin: 0 0 10px 0;
 }
 
 .controls__element {
