--- a/css/blocks/button.css
+++ b/css/blocks/button.css
@@ -11,7 +11,7 @@
     cursor:pointer;
     border:0;
 }
-.button:hover {transition: 0.5s linear;}
+.button:hover {transition: background 0.3s linear;}
 .button_style_def {
     background:#DFB56D;
 }
