--- a/css/blocks/socials.css
+++ b/css/blocks/socials.css
@@ -23,7 +23,7 @@
 .socials__link_vkontakte {background:url(../../img/socials/social.png) -46px -39px no-repeat;}
 .socials__link_facebook {background:url(../../img/socials/social.png) -92px -39px no-repeat;}
 .socials__link_instagram {background:url(../../img/socials/social.png) -138px -39px no-repeat;}
-.socials__link_telegram:hover {background:url(../../img/socials/social.png) left top no-repeat;}
-.socials__link_vkontakte:hover {background:url(../../img/socials/social.png) -47px top no-repeat;}
-.socials__link_facebook:hover {background:url(../../img/socials/social.png) -92px top no-repeat;}
-.socials__link_instagram:hover {background:url(../../img/socials/social.png) -138px top no-repeat;}
+.socials__link_telegram:hover {filter:brightness(205%); transition: filter 0.3s ease-in;}
+.socials__link_vkontakte:hover {filter:brightness(205%); transition: filter 0.3s ease-in;}
+.socials__link_facebook:hover {filter:brightness(205%); transition: filter 0.3s ease-in;}
+.socials__link_instagram:hover {filter:brightness(205%); transition: filter 0.3s ease-in;}
